infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
  

spec:
  rules:
    - host: ticketing.dev
      http:
        paths:
         - path: /api/users/?(.*)
           pathType: Prefix
           backend:
            service:
              name: auth-serv
              port:
                number: 3000
